--- a/package.json
+++ b/package.json
@@ -13,3 +13,10 @@
     "twitter-api-v2": "^1.15.0"
   }
 }
+"dependencies": {
+  "axios": "^1.6.0",
+  "express": "^4.19.2",
+  "twitter-api-v2": "^1.15.0",
+  "ioredis": "^5.3.2"
+}
+
