--- a/package.json
+++ b/package.json
@@ -10,13 +10,8 @@
   "dependencies": {
     "axios": "^1.6.0",
     "express": "^4.19.2",
-    "twitter-api-v2": "^1.15.0"
+    "twitter-api-v2": "^1.15.0",
+    "ioredis": "^5.3.2",
+    "dotenv": "^16.4.5"
   }
 }
-"dependencies": {
-  "axios": "^1.6.0",
-  "express": "^4.19.2",
-  "twitter-api-v2": "^1.15.0",
-  "ioredis": "^5.3.2"
-}
-
